<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="Daily">Daily</string>
    <string name="Total_Calories">Total Calories</string>
    <string name="Calories">Enter amount of calories</string>
    <string name="Confirm">Confirm</string>
    <string name="Name_of_food">Enter name of food</string>
    <string name="Weekly">Weekly</string>
    <string name="Percent">Percent</string>
    <string name="under">Under</string>

    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cardAddFood">Add another food item</string>
    <string name="add">Add</string>
</resources>
