<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:src="@drawable/ic_add_grey_24dp"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/percent_bar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="268dp"
        android:layout_height="263dp"
        android:layout_marginTop="48dp"
        android:progress="80"
        android:progressDrawable="@drawable/circle"
        android:rotation="-90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalCalories_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Total_Calories"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/percent_bar"
        app:layout_constraintEnd_toEndOf="@+id/percent_bar"
        app:layout_constraintStart_toStartOf="@+id/percent_bar"
        app:layout_constraintTop_toTopOf="@+id/percent_bar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/addCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:elevation="16dp"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="8dp"
                android:text="@string/cardAddFood" />

            <EditText
                android:id="@+id/foodName_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Name_of_food"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="24dp" />

            <EditText
                android:id="@+id/calorieAdd_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:hint="@string/Calories"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="24dp" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/add" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="380dp"
        android:layout_height="320dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:padding="4dp"
        android:scrollbars="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent_bar"
        app:layout_constraintVertical_bias="0.28" />

</androidx.constraintlayout.widget.ConstraintLayout>